--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,11 @@
+@import "../styles/dark-theme.css";
+
+@import "@liveblocks/react-ui/styles.css";
+@import "@liveblocks/react-lexical/styles.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* @import "@liveblocks/react-ui/styles.css"; */
-/* @import "@liveblocks/react-lexical/styles.css"; */
-
-/* @import "../styles/dark-theme.css"; */
 
 @layer base {
     :root {
